data/collection/fixes/descriptions/scala/scala-11034
### 2.12.6

```
Welcome to Scala 2.12.6 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_181).
Type in expressions for evaluation. Or try :help.

scala> object Foo { def unapplySeq(a: Int): Option[Iterable[Int]] = Some(Iterable(a)) }
defined object Foo

scala> val Foo(x) = 3
<console>:12: error: error during expansion of this match (this is a scalac bug).
The underlying error was: value length is not a member of Iterable[Int]
       val Foo(x) = 3
              ^
```

### 2.13.0-M4

```
Welcome to Scala 2.13.0-M4 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_181).
Type in expressions for evaluation. Or try :help.

scala> object Foo { def unapplySeq(a: Int): Option[Iterable[Int]] = Some(Iterable(a)) }
defined object Foo

scala> val Foo(x) = 3
              ^
       error: error during expansion of this match (this is a scalac bug).
       The underlying error was: value length is not a member of Iterable[Int]
```